--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Сучасний вхід</title>
+    <title>Введення логіну та паролю</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
