--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Введення логіну та паролю</title>
+    <title>Сучасний вхід</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="project-nav">
-  <ul>
-    <li><a href="https://vadymhoncharov.github.io/Lr3_1/">Сучасний вхід</a></li>
-    <li><a href="https://vadymhoncharov.github.io/Lr3_2/">Графічний пароль</a></li>
-    <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">Графічний ключ</a></li>
-    <li><a href="https://vadymhoncharov.github.io/Lr3_3/">Фільтр товарів</a></li>
-    <li><a href="https://vadymhoncharov.github.io/Lr3_4/">Фільтр товарів ред.</a></li>
-  </ul>
-</nav>
-    <div class="login-box">
-        <h2>Авторизація</h2>
-        <input type="text" id="login" placeholder="Введіть логін">
-        <input type="password" id="password" placeholder="Введіть пароль">
-        <button onclick="checkLogin()">Увійти</button>
-        <p id="error" class="error"></p>
-    </div>
+  <nav class="project-nav">
+    <ul>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">Сучасний вхід</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">Графічний пароль</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">Графічний ключ</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">Фільтр товарів</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">Фільтр товарів ред.</a></li>
+    </ul>
+  </nav>
 
+  <div class="content">
+    <div class="login-box">
+      <h2>Авторизація</h2>
+      <input type="text" id="login" placeholder="Введіть логін">
+      <input type="password" id="password" placeholder="Введіть пароль">
+      <button onclick="checkLogin()">Увійти</button>
+      <p id="error" class="error"></p>
+    </div>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
