--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <nav class="project-nav">
     <ul>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">Сучасний вхід</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">Графічний пароль</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">Графічний ключ</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">Фільтр товарів</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">Фільтр товарів ред.</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">1. Введення логіну та паролю</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">2. Віртуальна клавіатура</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">2.1 Графічний ключ</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">3. Фільтрація товарів</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">4. Фільтрація товарів з перенесеною кнопкою</a></li>
     </ul>
   </nav>
 
