--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Сучасний вхід</title>
+    <title>Введення логіну та паролю</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <nav class="project-nav">
     <ul>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">1. Введення логіну та паролю</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">2. Віртуальна клавіатура</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">2.1 Графічний ключ</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">3. Фільтрація товарів</a></li>
-      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">4. Фільтрація товарів з перенесеною кнопкою</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_1/">№1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2/">№1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_2.1/">№2.1</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_3/">№3</a></li>
+      <li><a href="https://vadymhoncharov.github.io/Lr3_4/">№4</a></li>
     </ul>
   </nav>
 
